# docks

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/plugins/: marketplace.json
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.codex/agents/: plan-manager.toml  (+2 more)
.github/: AGENTS.md
docs/: authoring-audits.md  optimization-audit-may-2026.md
plugins/session-relay/rust/: Cargo.toml
plugins/session-relay/rust/src/: appserver.rs  bus.rs  channel.rs  cli.rs  discover.rs  fanout.rs  gc.rs  hook.rs  lib.rs  lifecycle.rs  main.rs  sha256.rs  spawn.rs  store.rs  supervisor.rs  watch.rs  workspace.rs
plugins/session-relay/rust/src/fanout/: authority.rs  git.rs
plugins/session-relay/rust/src/workspace/: authority.rs  capability.rs  custody.rs  git.rs  platform.rs  repository_gate.rs  resources.rs  schema.rs
plugins/session-relay/rust/src/workspace/platform/: linux.rs  macos.rs
plugins/session-relay/rust/tests/: bus_smoke.rs  fanout.rs  lifecycle_admission.rs  lifecycle_managed.rs  lifecycle_release.rs  lifecycle_supervisor.rs  lock_race.rs  workspace_coordination_process.rs  workspace_identity.rs  workspace_lease_process.rs  workspace_resources.rs
plugins/session-relay/rust/tests/support/: fanout.rs  mod.rs  workspace.rs
plugins/session-relay/test/fixtures/lifecycle-capability-bypass/: Cargo.toml
scripts/: AGENTS.md  capture-tdd-red.mjs  ci-target.mjs  ci.mjs  ci.sh  guard-agents.sh  guard-commands.sh  guard-scaffold-spec.sh  guard-skills.sh  guard-tree.sh  read-floor.sh  release.mjs  release.sh  score-agents.sh  score-commands.sh  score-skills.sh  scoring.config.json  skill-content-hash.sh  test-scaffold.sh  verify-session-relay-preflight.mjs
tests/: idempotency.mjs  parity.mjs  skill-maintainer-idempotency.sh  skill-trigger-collision.mjs
(+547 files in other folders)
